--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </div>
             
             <div class="flex gap-4 items-center bg-black/40 p-2 rounded border border-gray-800">
-                <img src="URL_LOGO_BAR" alt="Logo Bar" class="h-12 w-12 object-contain border border-gray-700 p-1 rounded bg-black">
-                <img src="URL_LOGO_ASSO" alt="Logo Asso" class="h-12 w-12 object-contain border border-gray-700 p-1 rounded bg-black">
+                <img src="https://i.ibb.co/ccBRbrYK/le-repere-logo.png" alt="Logo Bar" class="h-12 w-12 object-contain border border-gray-700 p-1 rounded bg-black">
+                <img src="https://i.ibb.co/v4tXCt5J/ib-1.png" alt="Logo Asso" class="h-12 w-12 object-contain border border-gray-700 p-1 rounded bg-black">
             </div>
 
             <nav class="w-full mt-4 flex flex-wrap gap-2 text-[10px] font-bold">
@@ -372,3 +372,4 @@
     </script>
 </body>
 </html>
+
