--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <button onclick="clearCart()" class="w-full text-[9px] text-gray-600 mt-2 uppercase underline">Vider</button>
                 </div>
                 <div class="bg-black p-5 rounded border border-blue-900 shadow-2xl">
-                    <h3 class="text-xs text-blue-400 font-bold uppercase mb-4 tracking-widest border-b border-blue-900/30 pb-2">Chiffre d'affaire du Repère</h3>
+                    <h3 class="text-xs text-blue-400 font-bold uppercase mb-4 tracking-widest border-b border-blue-900/30 pb-2">Chiffre d'affaires du Repère</h3>
                     <div class="space-y-4">
                         <div class="flex justify-between items-end">
                             <div><p class="text-[9px] text-gray-500 uppercase font-bold">Hebdomadaire</p><p id="ca-weekly" class="text-3xl font-bold text-white leading-none">0$</p></div>
@@ -404,3 +404,4 @@
     </script>
 </body>
 </html>
+
