--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <header class="flex flex-wrap justify-between items-start mb-6 border-b border-gray-800 pb-4">
             <div>
                 <h1 class="text-4xl neon-blue italic">Le Repère</h1>
-                <p class="text-[10px] uppercase tracking-[0.3em] text-gray-500">Iron Brotherhood Management</p>
+                <p class="text-[10px] uppercase tracking-[0.3em] text-gray-500">Siège de l'association Iron Brotherhood</p>
             </div>
             
             <div class="flex gap-4 items-center bg-black/40 p-2 rounded border border-gray-800">
@@ -404,4 +404,5 @@
     </script>
 </body>
 </html>
+
 
