--- a/index.html
+++ b/index.html
@@ -470,8 +470,23 @@
         
         function addPhotoToGallery() { const url = prompt("URL de la photo :"); if(url) { gallery.push({id:Date.now(), url:url}); save(); render(); } }
         function deletePhoto(id) { if(confirm("Supprimer cette photo de la galerie ?")) { gallery = gallery.filter(p => p.id !== id); save(); render(); } }
-
+function updateStockPrompt(id) {
+    const p = products.find(x => x.id === id);
+    const newStock = prompt(`Nouveau stock pour ${p.name} :`, p.stock);
+    
+    if (newStock !== null) {
+        const val = parseInt(newStock);
+        if (!isNaN(val) && val >= 0) {
+            p.stock = val;
+            save();
+            render();
+        } else {
+            alert("Veuillez entrer un nombre valide.");
+        }
+    }
+}
         render();
     </script>
 </body>
 </html>
+
